# metadata

./: .gas-snapshot  .gitignore  404.html  Cargo.toml  README.md  REUSE.toml  flake.nix  foundry.toml  index.html  print.html  searchindex.js  searchindex.json  slither.config.json
.github/workflows/: ci-test.yaml  deploy-subgraph.yaml  manual-rs-release.yml  manual-sol-artifacts.yml  manual-subgraph-deploy.yml  qakit-ci-deployment.yaml  rainix.yaml  subgraph-test.yaml
cli/: .env  .rustfmt.toml  Cargo.toml  README.md  flake.nix
cli/src/: lib.rs  main.rs
cli/src/cli/: build.rs  magic.rs  mod.rs  output.rs  schema.rs  solc.rs  validate.rs
cli/src/cli/deploy/: mod.rs
cli/src/cli/magic/: ls.rs
cli/src/cli/schema/: show.rs
cli/src/cli/solc/: artifact.rs
cli/src/cli/subgraph/: mod.rs
cli/src/deploy/: dis.rs  mod.rs  registry.rs  transaction.rs
cli/src/error/: mod.rs
cli/src/meta/: magic.rs  mod.rs  normalize.rs
cli/src/meta/query/: deployer.graphql  mod.rs  schema.json  schema_legacy_np.json
cli/src/meta/types/: mod.rs
cli/src/meta/types/authoring/: v1.rs
cli/src/meta/types/common/: mod.rs  v1.rs
cli/src/meta/types/dotrain/: v1.rs
cli/src/meta/types/expression_deployer_v2_bytecode/: mod.rs  v1.rs
cli/src/meta/types/interpreter_caller/: v1.rs
cli/src/meta/types/op/: v1.rs
cli/src/meta/types/rainlang/: v1.rs
cli/src/meta/types/solidity_abi/: mod.rs  v2.rs
cli/src/solc/: mod.rs
cli/src/subgraph/: mod.rs
cli/src/utils/: mod.rs
cli/test/abis/invalid/: NoAbi.json
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/cli/: Cargo.toml  LICENSE.md  README.md  flake.nix
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cli/: magic.rs  output.rs  schema.rs  solc.rs  validate.rs
crates/cli/src/cli/schema/: ls.rs
crates/cli/src/cli/solc/: artifact.rs
crates/cli/src/error/: mod.rs
crates/cli/src/meta/: magic.rs  mod.rs
crates/cli/src/meta/query/: meta.graphql  mod.rs
crates/cli/src/meta/types/: mod.rs
crates/cli/src/meta/types/authoring/: mod.rs  v1.rs  v2.rs
crates/cli/src/meta/types/dotrain/: mod.rs
crates/cli/src/meta/types/expression_deployer_v2_bytecode/: v1.rs
crates/cli/src/meta/types/interpreter_caller/: mod.rs  v1.rs
crates/cli/src/meta/types/op/: mod.rs  v1.rs
crates/cli/src/meta/types/rainlang/: mod.rs
crates/cli/src/meta/types/rainlangsource/: mod.rs  v1.rs
crates/cli/src/meta/types/solidity_abi/: v2.rs
crates/cli/src/solc/: mod.rs
crates/metaboard/: Cargo.toml  build.rs
crates/metaboard/src/: cynic_client.rs  lib.rs  metaboard_client.rs
crates/metaboard/src/schema/: metaboard.graphql
crates/metaboard/src/types/: metas.rs  mod.rs
crates/metadata_wasm/: Cargo.toml
crates/metadata_wasm/src/: lib.rs
crates/subgraph/: Cargo.toml  build.rs
crates/subgraph/src/: lib.rs
crates/subgraph/src/types/: metas.rs
script/: Deploy.sol
src/concrete/: MetaBoard.sol  index.html
src/concrete/MetaBoard.sol/: contract.MetaBoard.html
src/interface/: IDescribedByMetaV1.sol  IMetaBoardV1.sol  IMetaV1.sol  index.html
src/interface/IMetaBoardV1.sol/: interface.IMetaBoardV1.html
src/interface/IMetaV1.sol/: constants.IMetaV1.html  error.NotRainMetaV1.html  error.UnexpectedMetaHash.html  interface.IMetaV1.html
src/interface/deprecated/: IMetaBoardV1.sol  IMetaV1.sol
src/interface/unstable/: IDescribedByMetaV1.sol  IMetaBoardV1_2.sol  IMetaV1_2.sol
src/lib/: LibDescribedByMeta.sol  LibMeta.sol  index.html
src/lib/LibMeta.sol/: library.LibMeta.html
subgraph/: .gitignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  hardhat.config.ts  networks.json  package-lock.json  package.json  schema.graphql  shell.nix  subgraph.template.yaml  subgraph.yaml  tsconfig.json
subgraph/abis/: MetaBoard.json
subgraph/src/: metaBoard.ts  metaV1.ts  utils.ts
subgraph/test/: metaBoard.test.js  metaBoard.test.mjs
subgraph/tests/: abi.json  deploy_and_emiti_meta_test.rs  metaBoard.test.ts  notice_test.rs  utils.ts
subgraph/tests/.bin/: metaboard.wasm
subgraph/tests/common/: mod.rs
subgraph/tests/common/deploy/: mod.rs
subgraph/tests/common/query/metaboard/: mod.rs
subgraph/tests/common/query/metav1/: mod.rs  query.graphql
subgraph/tests/common/wait/: mod.rs
test/concrete/: MetaBoard.hash.t.sol  MetaBoard.t.sol
test/lib/: LibDescribedByMeta.emitForDescribedAddress.t.sol  LibMeta.checkMetaHashedV1.t.sol  LibMeta.checkMetaHashedV1_2.t.sol  LibMeta.checkMetaUnhashedV1.t.sol  LibMeta.checkMetaUnhashedV1_2.t.sol  LibMeta.isRainMetaV1.t.sol  LibMeta.isRainMetaV1_2.t.sol  LibMeta.t.sol
