[workspace]
resolver = "2"
members = [ "crates/bindings",
    "crates/cli"
, "crates/metaboard"]

[workspace.dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
cynic-codegen = { version = "3.4.0", features = ["rkyv"] }
cynic = "3.4.0"
thiserror = "1.0.56"
insta = { version = "1.34.0" }
alloy = { version = "0.1.4", features = ["rand", "json", "json-abi"] }
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "0e636d2bc865a49c6eaea95ab139465708a65698" }
url = "2.5.0"
serde_json = "1.0.108"
async-trait = "0.1.77"
rain-erc = { git = "https://github.com/rainlanguage/rain.erc", rev = "e86b46bfce535f4c562b93a212171fbf19953a8f" }
typeshare = { git = "https://github.com/tomjw64/typeshare", rev = "556b44aafd5304eedf17206800f69834e3820b7c" }

[workspace.dependencies.rain-metadata-bindings]
path = "crates/bindings"

[workspace.dependencies.rain-metaboard-subgraph]
path = "crates/metaboard"
