[package]
name = "metaboard-subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
eyre = "*"
hex = "*"
cbor = "0.4.1"
serde_json = "1.0.96"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.70"
mustache = "0.9.0"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["json"] }
rust-bigint = "1.2.0"
graphql_client = "0.12.0"
serde_bytes = "0.11.9"
web3 = "0.19.0"
