[package]
name = "rain-metadata"
version = "0.0.2-alpha.6"
edition = "2021"
description = "Tooling and utilities for RainLanguage metadata."
license-file = "LICENSE.md"
repository = "https://github.com/rainlanguage/rain.metadata"

[features]
default = ["cli"]
cli = ["json-schema", "dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:tokio"]
json-schema = ["dep:schemars"]
tokio-full = ["cli", "tokio/full"]

[dependencies]
regex = "1.10.2"
anyhow = "1.0.75"
futures = "0.3.29"
once_cell = "1.18.0"
strum = { version = "0.24", features = ["derive"] }
serde = "1.0.192"
serde_json = { workspace = true }
itertools = "0.10.5"
serde_bytes = "0.11.12"
deflate = "1.0.0"
inflate = "0.4.5"
serde_cbor = "0.11.2"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
alloy-json-abi = { version = "0.5.0", features = ["serde_json"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
graphql_client = "0.13.0"
rain-metaboard-subgraph = { workspace = true }
rain-metadata-bindings = { workspace = true }
thiserror = { workspace = true }
alloy-ethers-typecast = { workspace = true }
url = { workspace = true }
hex = "0.4.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }


# json-schema
schemars = { version = "0.8.12", optional = true }

# cli
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
clap = { version = "4.4.8", features = ["cargo", "derive"], optional = true }
tokio = { version = "1.34.0", features = ["sync", "macros", "io-util", "rt", "time"], optional = true }

[dev-dependencies]
httpmock = "0.7.0"

[[bin]]
name = "rain-metadata"
path = "src/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[lints.clippy]
all = "warn"

[package.metadata.docs.rs]
all-features = true
