[package]
name = "rain_metaboard_subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3" }
reqwest = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cynic-codegen = { version = "3" }
