[package]
name = "metadata_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
hex = "0.4.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
rain-metadata = "0.0.2-alpha.6"
serde_bytes = "0.11.12"
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"